--- a/Server/package.json
+++ b/Server/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "Server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "pg": "^8.6.0",
-    "sequelize": "^6.6.2"
-  },
-  "devDependencies": {
-    "eslint": "^7.25.0",
-    "nodemon": "^2.0.7"
-  }
+    "name": "Server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "json": "^11.0.0",
+        "pg": "^8.6.0",
+        "sequelize": "^6.6.2"
+    },
+    "devDependencies": {
+        "eslint": "^7.25.0",
+        "nodemon": "^2.0.7"
+    }
 }
