--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "http": "^0.0.1-security",
         "json": "^11.0.0",
+        "peer": "^0.6.1",
         "pg": "^8.6.0",
-        "sequelize": "^6.6.2"
+        "sequelize": "^6.6.2",
+        "socket.io": "^4.1.1"
     },
     "devDependencies": {
         "eslint": "^7.25.0",
