--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "Server",
+    "name": "Fitome Server",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "http": "^0.0.1-security",
         "json": "^11.0.0",
