added node version spec in package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-    "name": "Fitome Server",
+    "name": "Server",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
     "scripts": {
         "start": "node server.js"
     },
+    "engines": { "node": "15.12.0" },
     "keywords": [],
     "author": "",
     "license": "ISC",
